Updated link to Necessary Uploads

--- a/Final_Targetless.ipynb
+++ b/Final_Targetless.ipynb
@@ -36,7 +36,7 @@
         "Please ensure that the necessary uploads are available, and their correct paths are present in Code blocks 18, 20, 21, 22 & 23.\n",
         "Also ensure that the input SMILES list is either uploaded in the session storage or present in your Google drive (mounting will be required in this case - see Section 2), and the correct path for it is updated in Code block 6.\n",
         "\n",
-        "The necessary uploads are available here - https://drive.google.com/drive/u/0/folders/1EJ9gKOwCO0Q7hUA3Go8DfG9-nG_VbkLg"
+        "The necessary uploads are available here - https://drive.google.com/drive/folders/186OZQBjX1mJEO5blm2xYKvaHQ_o2e81e?usp=sharing"
       ]
     },
     {
